Resolve nav bar spacing issues

--- a/practice-mockup-style.css
+++ b/practice-mockup-style.css
@@ -10,32 +10,43 @@ li {
 }
 
 nav {
+	position: relative;
 	background-color: white;
+	height: 100px;
+	margin-top: -20px;
+	margin-left: -20px;
+	padding-right: 100px;
+	margin-right: -30px;
+	padding: 0px;
 }
 
 nav ul li{
 	float: left;
-	margin-right: 40px;
+	padding-top: 45px;
 	font-family: Arial;
-	font-size: medium;
-	padding-top: 15px;
+	font-size: 14px;
+	margin-right: 40px;
 }
 
-nav img {
-	margin-top: -19px;
+nav ul li img{
+	margin-top: -17px;
 }
 
 nav ul li:hover {
 	color: red;
 }
+
 nav div {
 	float: right;
-	margin-top: -10px;
-	margin-right: 70px;
+	margin-right: 130px;
+	margin-top: 38px;
 	font-family: Arial;
+	font-size: 14px;
+	font-style: thin;
 	border-radius: 5px;
+	border: 1px;
 	border-style: solid;
-	padding: 8px 7px 8px 7px;
+	padding: 8px 7px 9px 7px;
 	border-color: #e0e0e0;
 }
 
